<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OTPLoginActivity"
    android:background="@color/white"
    android:paddingBottom="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_theme_white">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/illustration_top_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/illustration_bottom_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftMargin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="32dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/midMargin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightMargin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="32dp" />

        <ProgressBar
            android:id="@+id/mobile_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@id/leftMargin"
            app:layout_constraintEnd_toEndOf="@id/rightMargin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
            android:id="@+id/illustration_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/otp_illustration"
            android:src="@drawable/otp_illustration"
            app:layout_constraintBottom_toTopOf="@id/illustration_bottom_guide"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/illustration_top_guide" />

        <TextView
            android:id="@+id/login_mobile_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/otp_login_text"
            android:textColor="@color/black_foreground"
            android:textSize="35sp"
            app:layout_constraintLeft_toRightOf="@id/leftMargin"
            app:layout_constraintTop_toBottomOf="@id/illustration_image" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/country_code"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/white_input_background"
            android:fontFamily="@font/montserrat_semibold"
            android:gravity="center"
            android:inputType="none"
            android:editable="false"
            android:shadowColor="@color/light_grey"
            android:text="@string/country_code"
            android:textColor="@color/black_foreground"
            android:textColorHint="@color/light_grey"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/mobile_number_input"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/leftMargin"
            app:layout_constraintTop_toBottomOf="@id/login_mobile_text"
            tools:ignore="Deprecated" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mobile_number_input"
            android:layout_width="0dp"
            android:layout_height="68dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/white_input_background"
            android:fontFamily="@font/montserrat_semibold"
            android:hint="@string/phone_number_hint"
            android:inputType="phone"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:shadowColor="@color/light_grey"
            android:textColor="@color/black_foreground"
            android:textColorHint="@color/dark_grey"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/rightMargin"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/country_code"
            app:layout_constraintTop_toBottomOf="@id/login_mobile_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/send_otp_btn"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="68dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/gradient_background"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/send_otp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintLeft_toRightOf="@id/leftMargin"
            app:layout_constraintRight_toLeftOf="@id/rightMargin"
            app:layout_constraintTop_toBottomOf="@id/mobile_number_input" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>